section button aligning to middle second fix

--- a/assets/section-button.css
+++ b/assets/section-button.css
@@ -1,3 +1,4 @@
-.section-button {
-    text-align:center
+.section-button-container {
+    position: relative;
+    left: 50%;
 }
